DigestUtils: use Base64, not DatatypeConverter
Unlike java.util.Base64, the DatatypeConverter class is in
the javax.xml.bind package, which is not part of java.base.